# Sketchbook

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md
esp32/: boot.py  code.py  config.py  flash.py  network.py  rgb565.py
include/: GlobalDef.h  IBIOSEx.h  ICPUEx.h  IDevice.h  IPlatform.h  lhwm-cpp-wrapper.h
resources/: app.rc
skins/Sketchbook2/: skin.xml
skins/Sketchbook2/icon/: temp.png~
skins/Space/: skin.xml
skins/sketchbook/: skin.xml
src/: dirty_rects.hpp  frame.hpp  framelock.hpp  gif.h  http.h  image.hpp  limit_instance.h  log.hpp  main.cpp  rc.h  serial_port.h  settings.hpp  startup.hpp  system_stats.h  tcp.hpp  train.hpp  tray.hpp  weather.hpp
src/skins/: anime_flash_exporter.cpp  anime_skin.cpp  debug_skin.cpp  flash_exporter.hpp  skin.h
src/test/: cdc_streamer.cpp  msc_throughput_test.cpp  throughput_test.cpp  wifi_throughput_test.cpp
src/ui/: button.cpp  checkbox.cpp  dropdown.cpp  info.cpp  text_box.cpp
src/utils/: condition.h  jpegify.hpp  rgb565.h  util.h  xml.h
